# LLM-Annotator

./: .gitignore  Annotator_Tutorial .ipynb  Annotator_Tutorial.ipynb  README.md  example_local_llm.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
data/: .alltranscripts_423_clean_segmented.csv.icloud  .mol.csv.icloud  MOL Roles Features.xlsx
data/prompts/: base.txt  few_shot.txt  system_prompt.txt  zero_shot.txt
src/: __init__.py  config.py  dataloader.py  main.py  registry.py
src/llm_annotator/: __init__.py  annotator.py  config.py  dataloader.py  llm.py  main.py  pipeline.py  postprocess.py  preprocess.py  prompt_parser.py  registry.py  utils.py
temp/: batch_input.jsonl
